# SN_lab_1

./: .gitignore  CMakeLists.txt  dataset_and_bipolar.txt  dataset_and_unipolar.txt  dataset_or_bipolar.txt  dataset_or_unipolar.txt  main.cpp  parameters.txt
src/: CMakeLists.txt
src/classifiers/header/: Adaline.h  Perceptron.h  Score.h
src/classifiers/interface/: IClassifier.h  IScore.h
src/classifiers/source/: Adaline.cpp  Perceptron.cpp  Score.cpp
src/datasets/header/: Data.h  DataSet.h  DataSetAccessor.h
src/datasets/interface/: IData.h  IDataSet.h  IDataSetAccessor.h
src/datasets/source/: Data.cpp  DataSet.cpp  DataSetAccessor.cpp
src/files/header/: DataSetReader.h  ParametersReader.h
src/files/interface/: IDataSetReader.h  IParametersReader.h
src/files/source/: DataSetReader.cpp  ParametersReader.cpp
src/functions/header/: BipolarStepFunction.h  UnipolarStepFunction.h
src/functions/interface/: IActivationFunction.h
src/functions/source/: BipolarStepFunction.cpp  UnipolarStepFunction.cpp
src/neurons/header/: Neuron.h
src/neurons/interface/: INeuron.h
src/neurons/source/: Neuron.cpp
src/perceptron/header/: Perceptron.h
src/perceptron/source/: Perceptron.cpp
tests/: CMakeLists.txt
tests/tests/: DataSetAccessorTestSuite.cpp  NeuronTestSuite.cpp
tests/tests/classifiers/: PerceptronTestSuite.cpp
tests/tests/datasets/: DataSetAccessorTestSuite.cpp  DataSetTestSuite.cpp  DataTestSuite.cpp
tests/tests/functions/: BipolarStepFunctionTestSuite.cpp  UnipolarStepFunctionTestSuite.cpp
tests/tests/neurons/: NeuronTestSuite.cpp
